<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_item_detail"
    android:background="@color/bg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.thuellay.team2androidca.ItemDetailActivity"
    android:weightSum="1">

    <TableLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/edtDetailItemName" />
        </TableRow>

        <TableRow
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_desc" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/edtDetailItemDesc" />
        </TableRow>

        <TableRow
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_price" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/edtDetailItemPrice" />
        </TableRow>
        <TableRow
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_seller" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/edtDetailItemSeller" />
        </TableRow>
        <TableRow
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/item_status" />

            <RadioGroup

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold" />
                <RadioButton android:id="@+id/radio_available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available" />
            </RadioGroup>
        </TableRow>
        </TableLayout>

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnUpdateItem"
            android:background="@drawable/roundedbtn"
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginBottom="10dp">
        </Button>

        <Button
            android:background="@drawable/roundedbtn"
            android:id="@+id/btnDeleteItem"
            android:layout_below="@id/btnUpdateItem"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:text="@string/delete">
        </Button>

    </RelativeLayout>

</LinearLayout>
</ScrollView>